--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,10 +1,16 @@
+$theme: #100f14;
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: Montserrat;
-  background-color: black;
+  background-color: $theme;
   color: white;
+
+  @media only screen and (max-width: 600px) {
+    font-size: 14px;
+  }
 }
 
 * {
