--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
-$theme: #100f14;
+@import './icons.scss';
+@import './variables.scss';
 
 html,
 body {
@@ -8,7 +9,7 @@ body {
   background-color: $theme;
   color: white;
 
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 900px) {
     font-size: 14px;
   }
 }
