--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -48,7 +48,9 @@
   width: 100%;
   margin-top: 2rem;
   display: flex;
-  justify-content: space-evenly;
+  gap: 16px;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .logo {
